一覧ページに画像を並べる

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,13 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.grid-container {
+  @apply grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.grid-item {
+  @apply w-72 h-72;
+}
